# RD_CD_LoRaMAC_Demo

./: README.md
.west/: config
PingPong/: CMakeLists.txt  prj.conf  west.yml
PingPong/Application/: main.c
boards/arm/iotacomm_nrf52840/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  iotacomm_nrf52840-pinctrl.dtsi  iotacomm_nrf52840.dts  iotacomm_nrf52840.yaml  iotacomm_nrf52840_defconfig
boards/shields/semtech_sx1262_lora/: Kconfig.defconfig  Kconfig.shield  semtech_sx1262_lora.overlay
lorawan/class_a/: CMakeLists.txt  prj.conf
lorawan/class_a/src/: main.c
